--- a/main.html
+++ b/main.html
@@ -4,10 +4,32 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container" style="max-width: 600px; border: 5px solid rgb(4, 255, 4); background-color: rgb(41, 0, 0);">
+
+    <!-- Row 1 -->
+    <div class="row" style="border: 5px solid rgb(255, 188, 188); height: 200px;">
+      <div class="col-sm-6 col-md-4 d-flex align-items-center justify-content-center" style="border: 2px dotted rgb(38, 38, 43); background-color: teal;">Row1 col1</div>
+      <div class="col-sm-6 col-md-8 d-flex align-items-center justify-content-center" style="border: 2px dotted rgb(38, 38, 43); background-color: thistle;">Row1 col2</div>
+    </div>
+
+    <!-- Row 2 -->
+    <div class="row justify-content-center" style="border: 5px solid rgb(255, 188, 188); height: 200px;">
+      <div class="col-md-4 d-flex align-items-center justify-content-center" style="border: 2px dotted rgb(38, 38, 43); background-color: tomato;">Row2 col1</div>
+      <div class="col-md-4 d-flex align-items-center justify-content-center" style="border: 2px dotted rgb(38, 38, 43); background-color: turquoise;">Row2 col2</div>
+    </div>
+
+    <!-- Row 3 -->
+    <div class="row justify-content-center" style="border: 5px solid rgb(255, 188, 188); height: 200px;">
+      <div class="col-sm-6 col-md-4 d-flex align-items-center justify-content-center" style="border: 2px dotted rgb(38, 38, 43); background-color: violet;">Row3 col1</div>
+      <div class="col-sm-6 col-md-4 d-flex align-items-center justify-content-center" style="border: 2px dotted rgb(38, 38, 43); background-color: yellowgreen;">Row3 col2</div>
+    </div>
+
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
